--- a/css/default.css
+++ b/css/default.css
@@ -609,34 +609,28 @@ html, body {
 }
 
 /* Form */
-.error { font-size:13px;}
-.formSent, .formError {
-  display: none;
+.error {
+  font-size: 14px;
+  color: #b94a48;
 }
-.alert {
+.alert-success {
+  display: none;
   padding: 8px 35px 8px 14px;
   margin-bottom: 20px;
   color: #c09853;
   text-shadow: 0 1px 0 rgba(255,255,255,0.5);
   background-color: #fcf8e3;
   border: 1px solid #fbeed5;
-}
-.alert-success {
   color: #468847;
   background-color: #dff0d8;
   border-color: #d6e9c6;
-}
-.alert-error {
-  color: #b94a48;
-  background-color: #f2dede;
-  border-color: #eed3d7;
 }
 .bay {
   overflow: hidden;
   background-color: transparent;
 }
 .form-horizontal .control-group {margin-bottom: 10px;}
-.peThemeContactForm .controls .span9 {
+.contactForm .controls .span9 {
   width: 100%;
   border: none;
   outline: none;
