--- a/css/default.css
+++ b/css/default.css
@@ -921,17 +921,19 @@ html, body {
 }
 .work-exp-left-1, .work-exp-right-1, .work-exp-left-2, .work-exp-right-2 {
   display: block;
-  margin-left: calc(50% - 300px);
-  width: 600px;
-  height: 350px;
+  margin-left: calc(50% - 325px);
+  width: 650px;
   margin-bottom: 40px;
   background-color: #f7f7f7;
 }
-.work-exp-right-1 { height: 370px;}
-.work-exp-left-2, .work-exp-right-2 { height: 230px;}
+.work-exp-left-1 {height: 390px;}
+.work-exp-right-1 {height: 370px;}
+.work-exp-left-2 {height: 235px;}
+.work-exp-right-2 { height: 215px;}
 .work-logo img {
   width: 100px;
   height: 100px;
+  margin-top: 5px;
 }
 .work-company {
   text-transform: uppercase;
