--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,7 +18,7 @@
   .menu ul li {padding: 0 15px; font-size: 13px;}
   .mobile-parallax-image {margin-left: -470px; width: 940px;}
   .mobile-parallax-image img {width: 940px;}
-  .parallax.p-two { height: 555px;}
+  .parallax.p-two {height: 555px;}
   .main-title {font-size: 60px;  height: 352px;top: 50%; margin-top:-176px;}
   .portfolio-element div span {margin: 50% 20px 0px 20px; font-size: 15px;}
   .main-title .spacer {margin: 5px auto 25px;}
@@ -29,10 +29,10 @@
 /* Anything smaller than 976 pixels (devices and browsers) */
 @media only screen and (max-width: 976px) {
   .hideme, .newtr {opacity: 1;}
-  .parallax .hideme-slide, .parallax .hideme-slide2 { bottom:0 !important; opacity: 1 !important;}
+  .parallax .hideme-slide, .parallax .hideme-slide2 {bottom:0 !important; opacity: 1 !important;}
   .menu {display: none;}
   .jump-menu {display: block;}
-  .main-title { height: 350px;top: 50%; margin-top:-175px;}
+  .main-title {height: 350px;top: 50%; margin-top:-175px;}
   .skill-element {margin-bottom: 50px;}
   .continue-button {margin-top: 15px;}
   html {font-size: 75%;}
@@ -48,7 +48,7 @@
     cursor: pointer;
   }
   #navbar:not(:target) > a:first-of-type,#navbar:target > a:last-of-type {display: block;}
-  #navbar.active > ul { display:block;}
+  #navbar.active > ul {display:block;}
   #navbar > ul {height: auto; display: none; position: absolute; left: 0; right: 0; margin-top: 75px;}
   #navbar:target > ul {display: block;}
   #navbar > ul > li {width: 100%; float: none;}
@@ -59,7 +59,7 @@
 
 /* Tablet portrait sizes (devices and browsers) */
 @media only screen and (min-width: 796px) and (max-width: 976px) {
-  .main-title ul { font-size:40px;}
+  .main-title ul {font-size:40px;}
   .full {width: 783px;}
   .s-container {width: 705px;}
   .skill-element {width: 235px;}
@@ -83,13 +83,14 @@
 /* All mobile sizes (devices and browser) */
 @media only screen and (max-width: 795px) {
   .main-title ul {margin-top:0; height:80px;}
-  .main-title .spacer { margin:20px auto;}
+  .main-title .spacer {margin:20px auto;}
+  .work-exp-left-1, .work-exp-right-1, .work-exp-left-2, .work-exp-right-2 {width: 100%; margin-left: 0;}
 }
 
 /* Mobile landscape size to tablet portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 795px) {
   .main-title ul {font-size:20px;}
-  .main-title .second-title { width:345px;}
+  .main-title .second-title {width:345px;}
   .full {width: 466px;}
   .title.one {font-size: 40px; padding: 60px 40px 11px;}
   .title.two {font-size: 17px; padding: 0px 40px; width: auto;}
@@ -109,21 +110,27 @@
   .main-title span {top: 70px;}
   .logo {font-size: 23px;}
   .parallax.p-two {height: 400px;}
+  .work-exp-left-1 {height: 310px;}
+  .work-exp-right-1 {height: 295px;}
+  .work-exp-left-2 {height: 200px;}
+  .work-exp-right-2 {height: 185px;}
 }
 
 /* Mobile portrait size to mobile landscape size (devices and browsers) */
 @media only screen and (max-width: 479px) {
   .hideme {opacity: 1;}
   .hideme-slide {opacity: 1; bottom: auto !important;}
-  .main-title { height: 300px;top: 50%; margin-top:-150px;}
-  .logo { margin-left:20px;}
-  .main-title ul { font-size:20px;}
-  .main-title .second-title { font-size:13px; width:240px;}
+  .title-container {width: 90%;}
+  .main-title {height: 300px;top: 50%; margin-top:-150px;}
+  .logo {margin-left:20px;}
+  .main-title ul {font-size:35px;}
+  .main-title ul li {line-height: 50px;}
+  .main-title .second-title {font-size:14px; width:90%;}
   .full {width: 300px;}
   .menu {display: none;}
   .title.one {font-size: 19px; padding: 40px 40px 50px; width: auto;}
   .title.two {font-size: 17px; padding: 0px 40px; width: auto;}
-  .p-title-two { font-size:14px;}
+  .p-title-two {font-size:14px;}
   .fact-element {width: 100%;}
   #filters {padding: 0 40px;}
   .project-content {width: 300px;}
@@ -138,22 +145,26 @@
   .mobile-parallax-image img {width: 300px;}
   .content {width: 100%;overflow: hidden;}
   .main-title {font-size: 30px;}
-  .welcome { font-size:13px;}
+  .welcome {font-size:13px;}
   .main-title span {top: 100px;}
   .parallax.p-two {height: 255px;}
-  .parallax.p-two .spacer { display:none;}
-  .p-title-one { padding-top:40px;}
+  .parallax.p-two .spacer {display:none;}
+  .p-title-one {padding-top:40px;}
   .scrollup {display: none !important;}
-  .bouncing-arrow{display: none;}
+  .bouncing-arrow {display: none;}
+  .work-exp-left-1 {height: 340px;}
+  .work-exp-right-1 {height: 345px;}
+  .work-exp-left-2 {height: 205px;}
+  .work-exp-right-2 {height: 205px;}
 }
 
 /* Mobile portrait size to mobile landscape size (devices and browsers) */
 @media only screen and (max-height: 600px) {
-  #video-volume{bottom: 50px;}
+  #video-volume {bottom: 50px;}
 }
 
 /* Mobile portrait size to mobile landscape size (devices and browsers) */
 @media only screen and (max-height: 500px) {
-  #video-volume{bottom: 10px;}
-  .bouncing-arrow{display: none;}
+  #video-volume {bottom: 10px;}
+  .bouncing-arrow {display: none;}
 }
