--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* Large tablets and small computer monitors (devices and browsers) */
-@media only screen and (min-width: 976px) and (max-width: 1258px) {
+@media only screen and (min-width: 976px) and (max-width: 1280px) {
   .main-title ul {font-size: 65px;}
   .full {width: 960px;}
   .fact-element {width: 240px;}
@@ -26,14 +26,13 @@
   .project-title {top: 25%;}
 }
 
-/* Anything smaller than 976 pixels (devices and browsers) */
-@media only screen and (max-width: 976px) {
+/* Anything smaller than 975 pixels (devices and browsers) */
+@media only screen and (max-width: 975px) {
   .hideme, .newtr {opacity: 1;}
   .parallax .hideme-slide, .parallax .hideme-slide2 {bottom:0 !important; opacity: 1 !important;}
   .menu {display: none;}
   .jump-menu {display: block;}
   .main-title {height: 350px;top: 50%; margin-top:-175px;}
-  .skill-element {margin-bottom: 50px;}
   .continue-button {margin-top: 15px;}
   html {font-size: 75%;}
   #navbar {display: block; position: relative; top: auto; left: auto; font-size: 75%;}
@@ -58,7 +57,7 @@
 }
 
 /* Tablet portrait sizes (devices and browsers) */
-@media only screen and (min-width: 796px) and (max-width: 976px) {
+@media only screen and (min-width: 796px) and (max-width: 974px) {
   .main-title ul {font-size:40px;}
   .full {width: 783px;}
   .s-container {width: 705px;}
@@ -139,7 +138,7 @@
   .img-spacer img {width: 300px;}
   .img-item {display: none;}
   .footer-container {width: 90%;}
-  .s-container {width: 360px}
+  .s-container {width: 360px;}
   .skill-element {width: 180px;}
   .mobile-parallax-image {margin-left: -150px; width: 300px;}
   .mobile-parallax-image img {width: 300px;}
@@ -156,6 +155,16 @@
   .work-exp-right-1 {height: 345px;}
   .work-exp-left-2 {height: 205px;}
   .work-exp-right-2 {height: 205px;}
+  .tooltip {width: 100%; left: 0%; margin-left: 0px; padding: 0px;}
+  .details {line-height: 25px; padding: 5px;}
+}
+
+/* Small Mobile Screens */
+@media only screen and (max-width: 359px) {
+  .s-container {width: 100%;}
+  .skill-element {width: 50%;}
+  .skill-icon {width: 130px; height: 130px;}
+  .skill-title {padding-top: 50px; font-size: 20px;}
 }
 
 /* Mobile portrait size to mobile landscape size (devices and browsers) */
