--- a/css/style.css
+++ b/css/style.css
@@ -158,8 +158,8 @@ h3 {
 .contact .icons li:last-of-type { margin-right: 0px; }
 .contact .icons li a {
   display: block;
-  width: 55px;
-  height: 55px;
+  width: 45px;
+  height: 45px;
   opacity: .6;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
@@ -167,23 +167,23 @@ h3 {
 }
 .contact .icons .github {
   background: url(../img/github.png) no-repeat center;
-  background-size: 55px 55px;
+  background-size: 45px 45px;
 }
 .contact .icons .stackoverflow {
   background: url(../img/stackoverflow.png) no-repeat center;
-  background-size: 55px 55px;
+  background-size: 45px 45px;
+}
+.contact .icons .hackerrank {
+  background: url(../img/hackerrank.png) no-repeat center;
+  background-size: 45px 45px;
 }
 .contact .icons .codecademy {
   background: url(../img/codecademy.png) no-repeat center;
-  background-size: 55px 55px;
-}
-.contact .icons .khanacademy {
-  background: url(../img/khanacademy.png) no-repeat center;
-  background-size: 55px 55px;
+  background-size: 45px 45px;
 }
 .contact .icons .linkedin {
   background: url(../img/linkedin.png) no-repeat center;
-  background-size: 55px 55px;
+  background-size: 45px 45px;
 }
 .contact .icons li a:hover {
   opacity: 1;
@@ -339,6 +339,25 @@ h3 {
     position: absolute;
     right: 0;
     top: 0;
+    }
+  .contact .icons li a {
+    width: 55px;
+    height: 55px;
+  }
+  .contact .icons .github {
+    background-size: 55px 55px;
+  }
+  .contact .icons .stackoverflow {
+    background-size: 55px 55px;
+  }
+  .contact .icons .hackerrank {
+    background-size: 55px 55px;
+  }
+  .contact .icons .codecademy {
+    background-size: 55px 55px;
+  }
+  .contact .icons .linkedin {
+    background-size: 55px 55px;
   }
 }
 
