--- a/css/default.css
+++ b/css/default.css
@@ -869,7 +869,7 @@ html, body {
   text-align: center;
 }
 #navbar > ul > li:not( :last-child ) > a {
-  border-right: 1px solid #cc470d;
+  border-right: 1px solid #77be32;
 }
 #navbar > ul > li:hover > a,
 #navbar > ul:not(:hover) > li.active > a {
@@ -899,9 +899,7 @@ html, body {
 
 @media only screen and (max-width: 62.5em) { /* 1000 */
   #navbar {
-    display: none;
     width: 100%;
-    position: static;
     margin: 0;
   }
 }
@@ -1116,8 +1114,7 @@ html, body {
   #navbar > ul {height: auto; display: none; position: absolute; left: 0; right: 0; margin-top: 75px;}
   #navbar:target > ul {display: block;}
   #navbar > ul > li {width: 100%; float: none;}
-  #navbar > ul > li > a {height: auto; text-align: left; padding: 0 0.833em;}
-  #navbar > ul > li:not( :last-child ) > a {border-right: none; border-bottom: 1px dotted #999;}
+  #navbar > ul > li > a {height: auto; padding: 0 0.833em; border-right: none; border-bottom: 1px dotted #77be32;}
   #navbar li ul {position: static; padding: 1.25em; padding-top: 0;}
 }
 
