--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/* Common Styles -------------------------------------------------------------- */
+/* Common Styles */
 *,
 *:before,
 *:after {
@@ -25,7 +25,7 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
-/* Typography -------------------------------------------------------------- */
+/* Typography */
 h1, h2, h3 { margin: 0; }
 
 h1 {
@@ -57,7 +57,7 @@ h3 {
   margin: 0 auto 0 auto;
 }
 
-/* Content Styles -------------------------------------------------------------- */
+/* Content Styles */
 .wrapper {
   text-align: center;
   position: absolute;
@@ -281,7 +281,7 @@ h3 {
   top: 0;
 }
 
-/* Responsive Styles -------------------------------------------------------------- */
+/* Responsive Styles */
 /* Landscape Phone */
 @media all and (min-width: 400px) {
   /* TITLE & CONTACT */
@@ -711,7 +711,7 @@ h3 {
   }
 }
 
-/* Animation -------------------------------------------------------------- */
+/* Animation */
 @-webkit-keyframes wave {
   0% {
     -webkit-transform: rotateZ(0deg) translate3d(0,10%,0) rotateZ(0deg);
@@ -768,7 +768,7 @@ h3 {
   }
 }
 
-/* Button -------------------------------------------------------------- */
+/* Button */
 .button {
   width: 280px;
   left: 0;
