--- a/css/home.css
+++ b/css/home.css
@@ -907,7 +907,7 @@ html, body {
 .contact .copy-right {
   text-align:center;
   font-family: 'Open Sans', sans-serif;
-  color: #aaa;
+  color: #757575;
   font-size: 16px;
   margin-top: 30px;
 }
@@ -1033,8 +1033,8 @@ html, body {
   text-align: left;
 }
 .animated {
-  -webkit-animation-duration: 3s;
-  animation-duration: 3s;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
