--- a/css/home.css
+++ b/css/home.css
@@ -661,7 +661,7 @@ html, body {
   padding: 0 15px;
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
-  color: #c1c1c1;
+  color: #757575;
   font-weight: 400;
   line-height: 32px;
   text-decoration: none;
