--- a/css/home.css
+++ b/css/home.css
@@ -699,77 +699,15 @@ html, body {
   width: 1180px;
   margin: auto;
   overflow: auto;
-  color: #a8a8a8;
+  color: #757575;
   font-family: 'Open Sans', sans-serif;
   font-size: 17px;
   font-weight: 400;
 }
 
-/* Form */
-.error {
-  font-size: 14px;
-  color: #b94a48;
-}
-.alert-success {
-  display: none;
-  padding: 8px 35px 8px 14px;
-  margin-bottom: 20px;
-  color: #468847;
-  text-shadow: 0 1px 0 rgba(255,255,255,0.5);
-  border: 1px solid #d6e9c6;
-  background-color: #dff0d8;
-}
-.alert-error {
-  display: none;
-  padding: 8px 35px 8px 14px;
-  margin-bottom: 20px;
-  color: #b94a48;
-  text-shadow: 0 1px 0 rgba(255,255,255,0.5);
-  border: 1px solid #eed3d7;
-  background-color: #f2dede;
-}
-.bay {
-  overflow: hidden;
-  background-color: transparent;
-}
-.form-horizontal .control-group {margin-bottom: 10px;}
-.contactForm .controls .span9 {
-  width: 100%;
-  border: none;
-  outline: none;
-  padding: 11px;
-  font-weight: 300;
-  font-size: 13px;
-  color: #a8a8a8;
-  font-family: 'Montserrat', sans-serif;
-  background: #fbfbfb;
-}
-.controls.send-btn {
-  background: none;
-}
-.controls textarea {height: 100px;}
-.contour-btn {
-  width: 100%;
-  font-size: 14px;
-  line-height: 26px;
-  font-weight: 300;
-  display: inline-block;
-  color: #fff;
-  font-family: 'Montserrat', sans-serif;
-  padding: 3px 30px;
-  border-radius: 10px;
-  border: none;
-  -webkit-transition: all 0.4s ease-out;
-  -moz-transition: all 0.4s ease-out;
-  -o-transition: all 0.4s ease-out;
-  transition: all 0.4s ease-out;
-}
-.contour-btn:hover {
-  background: #f7f7f7 !important;
-  -webkit-transition: all 0.4s ease-out;
-  -moz-transition: all 0.4s ease-out;
-  -o-transition: all 0.4s ease-out;
-  transition: all 0.4s ease-out;
+.email {
+  text-align: center;
+  font-size: 20px;
 }
 
 /* Stats */
@@ -855,10 +793,8 @@ html, body {
   height:200px;
 }
 .contact .icons {
-  margin: 0;
+  margin: 60px auto 10px;
   padding: 0;
-  margin-top: 35px;
-  margin-bottom: 10px;
   text-align: center;
   list-style: none;
   list-style-type: none;
@@ -1003,8 +939,8 @@ html, body {
 
 /* Green Shaders */
 .green .skill-icon,.green .portfolio-element,.green .stat-icon,.green .p-two {background-color: #77be32;}
-.green .menu a:hover,.green #nav .current a,.green .contour-btn:hover,.green .second-title span {color: #77be32 !important;}
-.green .spacer,.green .folio-btn:hover,.green .contour-btn,.green .folio-btn.selected,.green .logo span span {background: #77be32;}
+.green .menu a:hover,.green #nav .current a,.green .second-title span {color: #77be32 !important;}
+.green .spacer,.green .folio-btn:hover,.green .folio-btn.selected,.green .logo span span {background: #77be32;}
 .green .logo span {background: #77be32; background: rgba(119,190,50,0.5);}
 .green .selected {border: 2px solid #77be32 !important; background: #77be32 !important;}
 
