--- a/css/index.css
+++ b/css/index.css
@@ -773,8 +773,7 @@ h3 {
   width: 260px;
   left: 0;
   right: 0;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   position: absolute;
   bottom: 23%;
   text-decoration: none;
@@ -786,7 +785,6 @@ h3 {
   color: #161a1b;
   background: transparent;
   border: 1px solid rgb(23,26,28);
-  border: 1px solid rgba(23,26,28,.3);
   -moz-border-radius: 10px;
   border-radius: 10px;
   padding: 15px 25px;
