--- a/css/home.css
+++ b/css/home.css
@@ -107,12 +107,14 @@ textarea {
     margin: 0.5cm;
   }
 
-  p, h2, h3 {
+  p {
     orphans: 3;
     widows: 3;
   }
 
   h2, h3 {
+    orphans: 3;
+    widows: 3;
     page-break-after: avoid;
   }
 }
@@ -128,10 +130,10 @@ textarea {
 }
 html, body {
   background: #000;
-  width:100%;
-  height:100%;
-  margin:0;
-  padding:0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 .hideme {opacity: 0;}
 .hideme-slide, .hideme-slide2 {opacity: 0; bottom: -100% !important;}
@@ -207,7 +209,7 @@ html, body {
 }
 
 /* Pre-load */
-#home {height:100%;}
+#home {height: 100%;}
 .header {
   width: 100%;
   height: 75px;
@@ -309,7 +311,7 @@ html, body {
   width: 100%;
   pointer-events: none;
   text-align: center;
-  z-index:10;
+  z-index: 10;
 }
 .main-title a {text-decoration: none;}
 .main-title .spacer {width: 60px; margin: 30px auto 40px;}
@@ -321,7 +323,7 @@ html, body {
   list-style: none;
   padding: 0;
   margin: 10px 0 0;
-  position:relative;
+  position: relative;
   height: 100px;
   font-size: 100px;
   font-weight: 300;
@@ -342,7 +344,7 @@ html, body {
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   transition-timing-function: ease;
-  -webkit-transition-timing-function: ease; /* Safari and Chrome */
+  -webkit-transition-timing-function: ease;
 }
 .main-title li.current-title {
   opacity: 1;
@@ -352,7 +354,7 @@ html, body {
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
   transition-timing-function: ease;
-  -webkit-transition-timing-function: ease; /* Safari and Chrome */
+  -webkit-transition-timing-function: ease;
 }
 
 /* Featured Works Caroussel */
@@ -561,7 +563,7 @@ html, body {
   border: none;
   border-radius: none;
 }
-.nav-arrows .next-button {background-position: right bottom; }
+.nav-arrows .next-button {background-position: right bottom;}
 .nav-arrows .prev-button {background-position: -218px bottom;}
 .nav-arrows div {
   cursor: pointer;
@@ -623,7 +625,7 @@ html, body {
   padding: 0;
   margin: 20% 20px;
   font-family: 'Open Sans', sans-serif;
-  letter-spacing:1px;
+  letter-spacing: 1px;
   font-size: 20px;
   font-weight: 400;
   color: #fff;
@@ -632,7 +634,7 @@ html, body {
 .portfolio-element div span span {
   margin: auto;
 }
-.portfolio-element div span span.project-position {color:#555; font-size:16px;}
+.portfolio-element div span span.project-position {color: #555; font-size: 16px;}
 #options {
   float: right;
   right: 50%;
@@ -782,10 +784,10 @@ html, body {
 
 /* Social Contact Footer */
 .contact {
-  position:relative;
-  background:#fff;
-  width:100%;
-  height:200px;
+  position: relative;
+  background: #fff;
+  width: 100%;
+  height: 200px;
 }
 .contact .icons {
   margin: 60px auto 10px;
@@ -840,14 +842,14 @@ html, body {
 
 /* Jump Menu */
 #navbar {
-  display:none;
-  width: 60em; /* 1000 */
+  display: none;
+  width: 60em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   position: absolute;
   top: 25%;
   left: 50%;
-  margin-left: -30em; /* 30 480 */
+  margin-left: -30em;
 }
 #navbar > a {
   display: none;
@@ -863,19 +865,19 @@ html, body {
 #navbar span:after {
   width: 0;
   height: 0;
-  border: 0.313em solid transparent; /* 5 */
+  border: 0.313em solid transparent;
   border-bottom: none;
   border-top-color: #efa585;
   content: '';
   vertical-align: middle;
   display: inline-block;
   position: relative;
-  right: -0.313em; /* 5 */
+  right: -0.313em;
 }
 
 /* first level */
 #navbar > ul {
-  height: 3.75em; /* 60 */
+  height: 3.75em;
   background-color: #f5f5f5;
   padding: 0;
 }
@@ -886,16 +888,16 @@ html, body {
 }
 #navbar > ul > li > a {
   height: 100%;
-  font-size: 1.5em; /* 24 */
-  line-height: 2.5em; /* 60 (24) */
+  font-size: 1.5em;
+  line-height: 2.5em;
   text-align: center;
 }
-#navbar > ul > li:not( :last-child ) > a {
+#navbar > ul > li:not(:last-child) > a {
   border-right: 1px solid #77be32;
 }
 #navbar > ul > li:hover > a,
 #navbar > ul:not(:hover) > li.active > a {
-  color:#333;
+  color: #333;
 }
 
 /* second level */
@@ -914,18 +916,18 @@ html, body {
   left: -1px;
 }
 #navbar li ul a {
-  font-size: 1.25em; /* 20 */
+  font-size: 1.25em;
   border-top: 1px solid #e15a1f;
-  padding: 0.75em; /* 15 (20) */
+  padding: 0.75em;
 }
 
-@media only screen and (max-width: 62.5em) { /* 1000 */
+@media only screen and (max-width: 62.5em) {
   #navbar {
     width: 100%;
     margin: 0;
   }
 }
-#mobile-background {height:100%; display:none; background-image: url("../img/bg.jpg"); background-size: cover;}
+#mobile-background {height: 100%; display: none; background-image: url("../img/bg.jpg"); background-size: cover;}
 
 /* Green Shaders */
 .green .skill-icon,.green .portfolio-element,.green .stat-icon,.green .p-two {background-color: #77be32;}
@@ -1095,8 +1097,8 @@ html, body {
   .mobile-parallax-image {margin-left: -470px; width: 940px;}
   .mobile-parallax-image img {width: 940px;}
   .parallax.p-two {height: 555px;}
-  .main-title {font-size: 60px;  height: 352px;top: 50%; margin-top:-176px;}
-  .portfolio-element div span {font-size:18px;}
+  .main-title {font-size: 60px; height: 352px;top: 50%; margin-top: -176px;}
+  .portfolio-element div span {font-size: 18px;}
   .main-title .spacer {margin: 5px auto 25px;}
   .project-title {top: 25%;}
 }
@@ -1104,7 +1106,7 @@ html, body {
 /* Anything smaller than 975 pixels (devices and browsers) */
 @media only screen and (max-width: 975px) {
   .hideme, .horizontal-line {opacity: 1;}
-  .parallax .hideme-slide, .parallax .hideme-slide2 {bottom:0 !important; opacity: 1 !important;}
+  .parallax .hideme-slide, .parallax .hideme-slide2 {bottom: 0 !important; opacity: 1 !important;}
   .menu {display: none;}
   .jump-menu {display: block;}
   .main-title {height: 350px;top: 50%; margin-top:-175px;}
@@ -1122,19 +1124,19 @@ html, body {
     cursor: pointer;
   }
   #navbar:not(:target) > a:first-of-type,#navbar:target > a:last-of-type {display: block;}
-  #navbar.active > ul {display:block;}
+  #navbar.active > ul {display: block;}
   #navbar > ul {height: auto; display: none; position: absolute; left: 0; right: 0; margin-top: 75px;}
   #navbar:target > ul {display: block;}
   #navbar > ul > li {width: 100%; float: none;}
   #navbar > ul > li > a {height: auto; padding: 0 0.833em; border-right: none; border-bottom: 1px dotted #77be32;}
   #navbar li ul {position: static; padding: 1.25em; padding-top: 0;}
-  .portfolio-element div span {font-size:16px;}
-  .portfolio-element div span span.project-position {font-size:14px;}
+  .portfolio-element div span {font-size: 16px;}
+  .portfolio-element div span span.project-position {font-size: 14px;}
 }
 
 /* Tablet portrait sizes (devices and browsers) */
 @media only screen and (min-width: 796px) and (max-width: 974px) {
-  .main-title ul {font-size:60px;}
+  .main-title ul {font-size: 60px;}
   .full {width: 783px;}
   .s-container {width: 705px;}
   .skill-element {width: 235px;}
@@ -1157,14 +1159,14 @@ html, body {
 
 /* All mobile sizes (devices and browser) */
 @media only screen and (max-width: 795px) {
-  .main-title ul {margin-top:0; height:80px; font-size: 35px;}
-  .main-title .spacer {margin:20px auto;}
+  .main-title ul {margin-top: 0; height: 80px; font-size: 35px;}
+  .main-title .spacer {margin: 20px auto;}
   .work-exp-right-0, .work-exp-left-1, .work-exp-right-1, .work-exp-left-2, .work-exp-right-2 {width: 100%; margin-left: 0;}
 }
 
 /* Mobile landscape size to tablet portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 795px) {
-  .main-title .second-title {width:345px;}
+  .main-title .second-title {width: 345px;}
   .full {width: 466px;}
   .title.one {font-size: 40px; padding: 60px 40px 11px;}
   .title.two {font-size: 17px; padding: 0 40px; width: auto;}
@@ -1191,15 +1193,15 @@ html, body {
   .hideme {opacity: 1;}
   .hideme-slide {opacity: 1; bottom: auto !important;}
   .title-container {width: 90%;}
-  .main-title {height: 300px;top: 50%; margin-top:-150px;}
-  .logo {margin-left:20px;}
+  .main-title {height: 300px; top: 50%; margin-top: -150px;}
+  .logo {margin-left: 20px;}
   .main-title ul li {line-height: 50px;}
-  .main-title .second-title {font-size:14px; width:90%;}
+  .main-title .second-title {font-size: 14px; width: 90%;}
   .full {width: 300px;}
   .menu {display: none;}
   .title.one {font-size: 19px; padding: 40px 40px 50px; width: auto;}
   .title.two {font-size: 17px; padding: 0 40px; width: auto;}
-  .p-title-two {font-size:14px;}
+  .p-title-two {font-size: 14px;}
   .stat-element {width: 100%;}
   #filters {padding: 0 40px;}
   .project-content {width: 300px;}
@@ -1212,16 +1214,16 @@ html, body {
   .skill-element {width: 180px;}
   .mobile-parallax-image {margin-left: -150px; width: 300px;}
   .mobile-parallax-image img {width: 300px;}
-  .content {width: 100%;overflow: hidden;}
+  .content {width: 100%; overflow: hidden;}
   .main-title {font-size: 30px;}
-  .welcome {font-size:13px;}
+  .welcome {font-size: 13px;}
   .main-title span {top: 100px;}
   .parallax.p-two {height: 255px;}
-  .parallax.p-two .spacer {display:none;}
-  .p-title-one {padding-top:40px;}
+  .parallax.p-two .spacer {display: none;}
+  .p-title-one {padding-top: 40px;}
   .scrollup {display: none !important;}
   .bouncing-arrow {display: none;}
-  .tooltip {width: 100%; left: 0%; margin-left: 0; padding: 0;}
+  .tooltip {width: 100%; left: 0; margin-left: 0; padding: 0;}
   .details {line-height: 25px; padding: 5px;}
   .contact .icons li {margin-right: 5px;}
   .contact .icons li a {width: 55px; height: 55px;}
